<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView-->

<!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#546E7A"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <!--Team A-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/team_a_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:fontFamily="@font/segoeuil"
                android:hint="@string/team_a"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="#424242"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/segoeuil"
                android:text="@string/zero"
                android:textColor="@android:color/black"
                android:textSize="50sp" />


            <Button
                android:id="@+id/team_a_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamAButtonStyle"
                android:onClick="setGoal"
                android:text="@string/goal"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_a_shot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamAButtonStyle"
                android:onClick="setShot"
                android:text="@string/shot"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_a_on_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamAButtonStyle"
                android:onClick="setTarget"
                android:text="@string/on_target"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_a_tackle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamAButtonStyle"
                android:onClick="setTackle"
                android:text="@string/tackle"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamAButtonStyle"
                android:onClick="setFoul"
                android:text="@string/foul"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_a_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TeamAButtonStyle"
                android:onClick="setCorner"
                android:text="@string/corner"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </LinearLayout>


        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#78909C" />

        <!--Team B-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/team_b_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/segoeuil"
                android:hint="@string/team_b"
                android:inputType="textCapWords"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHint="#B0BEC5"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/segoeuil"
                android:text="@string/zero"
                android:textColor="@android:color/white"
                android:textSize="50sp" />

            <Button
                android:id="@+id/team_b_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamBButtonStyle"
                android:onClick="setGoal"
                android:text="@string/goal"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_b_shot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                style="@style/TeamBButtonStyle"
                android:onClick="setShot"
                android:text="@string/shot"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_b_on_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/segoeuil"
                android:onClick="setTarget"
                android:text="@string/on_target"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_b_tackle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/segoeuil"
                android:onClick="setTackle"
                android:text="@string/tackle"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_b_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/segoeuil"
                android:onClick="setFoul"
                android:text="@string/foul"
                android:textSize="20sp" />

            <Button
                android:id="@+id/team_b_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/segoeuil"
                android:onClick="setCorner"
                android:text="@string/corner"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:backgroundTint="#c62828"
        android:fontFamily="@font/segoeuil"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/show_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:backgroundTint="#004D40"
        android:fontFamily="@font/segoeuil"
        android:text="@string/stats"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</RelativeLayout><!--</ScrollView>-->